# webwatch

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  config.advanced.toml.example  config.docker.toml.example  config.toml.example  docker-compose.yml  mise.toml  package.json  targets.toml  targets.toml.example
.github/workflows/: docker-publish.yml
context/: known-issues.md  verification.md
context/specs/: 2026-06-15-cloakbrowser-renderer-design.md  2026-06-18-frontend-production-redesign.md
deploy/kubernetes/: webwatch-cloakbrowser.yaml
designs/webwatch-watch-builder/: _d_meta.json  app.js  builder.js  catalog.js  data.js  engine.js  index.html  nl.js  shell.js  styles.css  ui.js  vendor.js
docs/adr/: 0001-single-persistence-backend.md  0002-db-authoritative-targets.md
docs/design/: 2026-05-30-add-target-form-seam.md  2026-05-30-condition-validation-seam.md  2026-05-30-frontend-form-state-seam.md  2026-05-30-persistence-status-baseline.md  2026-05-30-target-lifecycle-create.md  2026-05-30-target-lifecycle-expand.md  2026-05-31-condition-rule-internal-model.md  2026-06-09-solid-frontend.md
docs/plans/: 2026-05-24-webwatch-frontend.md
docs/specs/: 2026-05-20-webwatch-refactor-design.md  2026-05-24-webwatch-frontend-design.md
docs/superpowers/plans/: 2026-06-09-watch-builder.md
docs/superpowers/specs/: 2026-05-20-webwatch-refactor-design.md
src/: browser.rs  check.rs  config.rs  db.rs  discord.rs  error.rs  evaluator.rs  http.rs  lib.rs  main.rs  models.rs  monitor.rs  renderer.rs  scheduler.rs  targets.rs
src/db/: diesel.rs  mod.rs  seaorm.rs  sqlx.rs
tests/: http_fixture.rs  live_renderer.rs  persistence_backend.rs  reload.rs  targets_api.rs
web/: index.html  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
web/src/: App.tsx  app.css  index.tsx
web/src/components/: BuilderPane.tsx  ConditionCard.tsx  ConfirmDialog.tsx  Icon.tsx  Shell.tsx  StatusBadge.tsx  StatusDot.tsx  Toast.tsx  Topbar.tsx  WatchDetail.tsx  WatchList.tsx  WatchListItem.tsx
web/src/lib/: api.ts  conditions.test.ts  conditions.ts  format.test.ts  format.ts  mutations.ts  nl.ts  queries.ts  status.test.ts  status.ts  types.ts
web/src/pages/: Detail.tsx  EditWatch.tsx  Home.tsx  NewWatch.tsx  Ops.tsx
web/src/routes/: +layout.svelte  +page.svelte  integration.test.ts
web/src/styles/: instrument.css  reset.css
(+28 files in other folders)
