[package]
name = "webwatch"
version = "0.1.0"
edition = "2021"

[features]
default = ["persistence-diesel"]
persistence-diesel = ["dep:diesel"]
persistence-sqlx = ["dep:sqlx"]
persistence-seaorm = ["dep:sea-orm"]

[dependencies]
async-trait = "0.1"
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
diesel = { version = "2.3.9", features = ["sqlite", "r2d2"], optional = true }
futures-util = "0.3"
mime_guess = "2"
rand = "0.8"
rust-embed = { version = "8", features = ["mime-guess"] }
regex = "1"
reqwest = { version = "0.12", features = ["json", "cookies", "rustls-tls"], default-features = false }
scraper = "0.23"
sea-orm = { version = "1.1.20", default-features = false, features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
snafu = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono"], optional = true }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
toml = "0.8"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
url = "2"

[dev-dependencies]
axum = { version = "0.7", features = [] }
tempfile = "3"
tower = { version = "0.4", features = ["util"] }
